# minilogger

./: CMakeLists.txt  Logger.cpp  Logger.h  README.md
.github/workflows/: cmake-multi-platform.yml
test/: CMakeLists.txt  CodeCoverage.cmake  TestMiniLogger.cpp
